--- a/index.html
+++ b/index.html
@@ -356,13 +356,68 @@
     </footer>
 
     <!-- BACKDROP -->
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
                 <svg width="18px" height="18px" class="modal-close-icon">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
+
+            <form class="modal-form">
+                <b class="modal-header">Залиште свої дані, ми вам передзвонимо</b>
+                <label class="modal-field">
+                    <span class="modal-field-desc">Ім'я</span>
+                    <span class="modal-field-wrapper">
+                        <input type="text"
+                        class="modal-field-input"
+                        required
+                        pattern="[a-zA-Zа-яА-ЯіІїЇєЄ'ґҐ]+"
+                        name="user_name">
+                        <svg width="18px" height="18px" class="modal-field-icon">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-field">
+                    <span class="modal-field-desc">Телефон</span>
+                    <span class="modal-field-wrapper">
+                        <input
+                        type="tel"
+                        class="modal-field-input"
+                        required
+                        name="user_phone">
+                        <svg width="18px" height="18px" class="modal-field-icon">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-field">
+                    <span class="modal-field-desc">Пошта</span>
+                    <span class="modal-field-wrapper">
+                        <input
+                        type="email"
+                        class="modal-field-input"
+                        required
+                        name="user_email">
+                        <svg width="18px" height="18px" class="modal-field-icon">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-field">
+                    <span class="modal-field-desc">Коментар</span>
+                    <textarea
+                        name="user_comment"
+                        class="modal-comment"
+                        placeholder="Введіть текст"></textarea>
+                </label>
+                <label class="modal-checkbox-wrapper">
+                    <input type="checkbox" name="user_policy" class="modal-checkbox">
+                    Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a>
+                </label>
+                <button type="submit" class="modal-submit">Відправити</button>
+            </form>
         </div>
     </div>
 
