Add subscription form into footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -243,6 +243,25 @@
                     </li>
                 </ul>
             </div>
+    
+            <div>
+                <p class="footer-join">Підпишіться на розсилку</p>
+                <form class="footer-form">
+                    <label>
+                        <input
+                        type="email"
+                        class="footer-field-input"
+                        required
+                        name="user_subscription_email"
+                        placeholder="E-mail">
+                    </label>
+                    <button type="submit" class="subscript-btn">Підписатися
+                        <svg width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 
