Corrections after mentor's feedback

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container container-footer">
-            <div>
+            <div class="address-container">
                 <a href="./index.html" lang="en" class="logo logo-footer"> <span class="logo-accent">Web</span>Studio</a>
                 <address>
                     <ul class="list">
@@ -323,7 +323,7 @@
                 </address>
             </div>
 
-            <div>
+            <div class="join-container">
                 <p class="footer-join">Приєднуйтесь</p>
                 <ul class="list social-list">
                     <li class="social-list-item">
@@ -424,7 +424,7 @@
                         </svg>
                     </span>
                 </label>
-                <label class="modal-field">
+                <label class="modal-textarea">
                     <span class="modal-field-desc">Коментар</span>
                     <textarea
                         name="user_comment"
