Copy footer to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container container-footer">
-            <div>
+            <div class="address-container">
                 <a href="./index.html" lang="en" class="logo logo-footer"> <span class="logo-accent">Web</span>Studio</a>
                 <address>
                     <ul class="list">
@@ -214,7 +214,7 @@
                 </address>
             </div>
     
-            <div>
+            <div class="join-container">
                 <p class="footer-join">Приєднуйтесь</p>
                 <ul class="list social-list">
                     <li class="social-list-item">
@@ -248,12 +248,8 @@
                 <p class="footer-join">Підпишіться на розсилку</p>
                 <form class="footer-form">
                     <label>
-                        <input
-                        type="email"
-                        class="footer-field-input"
-                        required
-                        name="user_subscription_email"
-                        placeholder="E-mail">
+                        <input type="email" class="footer-field-input" required name="user_subscription_email"
+                            placeholder="E-mail">
                     </label>
                     <button type="submit" class="subscript-btn">Підписатися
                         <svg width="24px" height="24px">
